syntax = "proto3"; 

import "google/protobuf/empty.proto";

package employee;

service EmployeeService {
    rpc GetAllEmployees(google.protobuf.Empty) returns (GetAllEmployeesResponse);
    rpc GetEmployee(GetEmployeeRequest) returns (GetEmployeeResponse);
    rpc CreateEmployee(CreateEmployeeRequest) returns (CreateEmployeeResponse);
}

message GetAllEmployeesResponse {
    repeated Employee employees = 1;
}

message Employee {
    string id = 1;
    string name = 2; 
    string address = 3; 
    string ssn = 4; 
    bool marital_status = 5;
}

message GetEmployeeRequest {
    string employee_id = 1;
}

message GetEmployeeResponse {
    Employee employee = 1;
}

message CreateEmployeeRequest {
    string name = 1; 
    string address = 2; 
    string ssn = 3; 
    bool marital_status = 4;
}

message CreateEmployeeResponse {
    Employee employee = 1;
}

